# fitness-calorie-app

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml  cicd.yml  keepalive.yml
apps/client_flutter/: README.md  pubspec.yaml
apps/client_flutter/lib/: api.dart  config.dart  main.dart  theme.dart
apps/client_flutter/lib/screens/: blacklist_screen.dart  goal_wizard_screen.dart  home_screen.dart  meal_edit_screen.dart  meal_plan_screen.dart  meals_screen.dart  profile_screen.dart  recipes_screen.dart  settings_screen.dart  workout_screen.dart
apps/client_flutter/lib/widgets/: common.dart
apps/client_flutter/web/: index.html  manifest.json
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
apps/web/docs/: backend-contract.md
apps/web/src/: ai.jsx  analytics.js  app.jsx  auth.jsx  entry.jsx  globals.js  icons.jsx  mock.jsx  modals.jsx  muscle-map.jsx  screens-dashboard.jsx  screens-meals.jsx  screens-misc.jsx  screens-recipes.jsx  screens-workout.jsx  styles.css  supabase.js  ui.jsx
db/: README.md
docs/: DEPLOY.md  DESIGN.md
infra/docker/: docker-compose.yml
services/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml  start.sh
services/api/alembic/: env.py
services/api/alembic/versions/: 21d2cb59f802_initial_schema.py  5456c571037d_add_workout_log.py  995bec0c6fd8_add_photo_path_to_meal_log.py  a1b2c3d4e5f6_add_recipe_media_category.py  b2c3d4e5f6a7_add_recipe_macros.py  c3d4e5f6a7b8_add_supabase_uid.py
services/api/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  security.py  seeds.py
services/api/app/adapters/: __init__.py  base.py  free_exercise_db.py  openfoodfacts.py  spoonacular.py  themealdb.py  usda.py  wger.py
services/api/app/data/: food_terms.py  ingredients_tr.py  portions.py  recipes_phase3.py  recipes_tr.py  workouts.py
services/api/app/routers/: admin.py  blacklist.py  foods.py  health.py  meal_plans.py  meals.py  profile.py  recipes.py  recommendations.py  summary.py  workouts.py
services/api/app/schemas/: blacklist.py  food.py  meal.py  meal_plan.py  profile.py  recipe.py  recommendation.py  summary.py  workout.py
services/api/app/services/: __init__.py  blacklist.py  energy.py  extract.py  food_import.py  intake.py  llm.py  meal_items.py  meal_parser.py  meal_plan.py  meal_reco.py  nutrition.py  recipe_import.py  recipe_kcal.py  recipes.py  recommend.py  resolver.py  sources.py  storage.py  substitution.py  text.py  translate.py  units.py  user.py  wger_import.py
services/api/tests/: conftest.py  test_adapters.py  test_auth.py  test_barcode.py  test_blacklist.py  test_db_ssl.py  test_energy.py  test_food_terms.py  test_foods.py  test_health.py  test_import.py  test_llm.py  test_meal_plan.py  test_meal_reco.py  test_meals.py  test_models.py  test_parser.py  test_pg_smoke.py  test_photo.py  test_profile.py  test_recipe_kcal.py  test_recipes.py  test_recommendations.py  test_resolver.py  test_storage.py  test_substitution.py  test_translate.py  test_units.py  test_wger_import.py  test_workouts.py
