[project]
name = "fitness-calorie-api"
version = "0.1.0"
description = "Türkçe Beslenme & Fitness Koçu — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "uvicorn>=0.34",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.6",
    "ruff>=0.7",
    "mypy>=2.1.0",
    "pytest-cov>=7.1.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    "respx>=0.23.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI Depends/Query/Header'ı argüman varsayılanında çağırmak deyimseldir.
ignore = ["B008"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["app"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "alembic"]

[tool.uv]
package = false
